force-app/main/default/objects/Block__mdt/Block__mdt.object-meta.xml
<CustomObject>
    <label>Block</label>
    <pluralLabel>Blocks</pluralLabel>
</CustomObject>