force-app/main/default/objects/Block__mdt/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <referenceTo>Floor__mdt</referenceTo>
    <relationshipLabel>Blocks</relationshipLabel>
    <relationshipName>Blocks</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>