force-app/main/default/objects/Block__mdt/fields/isMeetingRoom__c.field-meta.xml
<CustomField>
    <fullName>isMeetingRoom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMeetingRoom</label>
    <type>Checkbox</type>
</CustomField>