force-app/main/default/objects/Block__mdt/fields/IsWindow__c.field-meta.xml
<CustomField>
    <fullName>IsWindow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWindow</label>
    <type>Checkbox</type>
</CustomField>