force-app/main/default/objects/Block__mdt/fields/Window__c.field-meta.xml
<CustomField>
    <fullName>Window__c</fullName>
    <label>Window</label>
    <length>255</length>
    <type>Text</type>
</CustomField>